# gco_python

./: .gitignore  .travis.yml  CMakeLists.txt  GCO_README.TXT  GCoptimization.cpp  GCoptimization.h  Makefile  README.md  __init__.py  energy.h  example  example.py  example_middlebury.py  gco_python.cpp  gco_python.pyx  graphcut.py  scene1.row3.col2.ppm  setup.py  test.py  travis.yml
matlab/: GCO_BuildLib.m  GCO_SetDataCost.m  GCO_SetLabelCost.m  GCO_SetSmoothCost.m  README.TXT  gco_matlab.cpp
